bases/odin-2/deployment-odin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odin
  template:
    metadata:
      labels:
        app: odin
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: regcred # create me with a secret generator
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: odin
          image: ghcr.io/tomay0/odincards
          securityContext: 
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # TODO
            seccompProfile:
              type: RuntimeDefault
          resources: {} # TODO
          ports:
            - name: http
              containerPort: 3000
