bases/odin-2/service-odin.yaml
apiVersion: v1
kind: Service
metadata:
  name: odin
spec:
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  selector:
    app: odin
