bases/odin-2/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - name: redis
    targetPort: redis
    port: redis
    protocol: TCP
  selector:
    app: redis
