bases/odin-2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odin
spec:
  parentRefs:
    - name: public
      namespace: ingress
  hostnames:
    - new.odin-cards.com
  rules:
    - backendRefs:
        - name: odin
          port: 80
