bases/odin-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odin
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - odin-cards.com
    secretName: odin-tls
  rules:
  - host: odin-cards.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odin
            port: 
              name: http
